<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/find_textview_width"
            android:layout_height="@dimen/find_textview_width"
            android:layout_marginTop="@dimen/find_textview_marginTop"
            android:gravity="center"
            android:text="@string/find_editview_accounts"
            android:textColor="@color/text_color"
            android:textSize="@dimen/find_textview_textsize" />

        <EditText
            android:layout_width="@dimen/find_editview_width"
            android:layout_height="@dimen/find_editview_height"
            android:layout_gravity="center"
            android:background="@drawable/editview"
            android:hint="@string/find_editview_account_hint"
            android:textColor="@color/dark"
            android:textSize="@dimen/find_textview_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/find_textview_width"
            android:layout_height="@dimen/find_textview_height"
            android:layout_marginTop="@dimen/find_second_ll_textview_margintop"
            android:gravity="center"
            android:text="@string/find_editview_email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/find_textview_textsize" />

        <EditText
            android:layout_width="@dimen/find_editview_width"
            android:layout_height="@dimen/find_editview_height"
            android:layout_gravity="center"
            android:background="@drawable/editview"
            android:hint="@string/find_editview_email_hint"
            android:textColor="@color/dark"
            android:textSize="@dimen/find_textview_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/find_third_ll_marginleft"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/find_third_textview_width"
            android:layout_height="@dimen/find_third_textview_height"
            android:layout_marginTop="@dimen/find_third_textview_margintop"
            android:gravity="center"
            android:text="@string/yzm"
            android:textColor="@color/text_color"
            android:textSize="@dimen/find_textview_textsize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="@dimen/find_third_editview_width"
                android:layout_height="@dimen/find_third_editview_height"
                android:background="@drawable/editview"
                android:layout_gravity="center"
                android:hint="@string/find_editview_yzm_hint"
                android:textSize="@dimen/find_textview_textsize"
                android:textColor="@color/dark"
                />
            <TextView
                android:layout_width="@dimen/find_yzm_width"
                android:layout_height="@dimen/find_yzm_height"
                android:text="@string/find_yzm_text"
                android:gravity="center"
                android:layout_marginLeft="@dimen/find_yzm_marginleft"
                android:textColor="@android:color/holo_blue_light"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="@dimen/find_button_width"
        android:layout_height="@dimen/find_button_height"
        android:background="@drawable/button"
        android:text="@string/sublime"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/find_button_margintop"
        android:textColor="@android:color/white" />

</LinearLayout>